--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "type": "module",
   "scripts": {
     "compile": "tsc",
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "tscdev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
+    "dev:server": "nodemon --watch './**/*.ts' --exec 'ts-node' src/index.ts",
     "start": "npm run compile && node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +20,14 @@
     "graphql": "^16.7.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@types/node": "^20.3.3",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   }
 }
