--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,13 @@
     "outDir": "dist",
     "lib": ["es2020"],
     "target": "es2020",
-    "module": "esnext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "preserveValueImports": false,
     "types": ["node"]
+  },
+  "ts-node": {
+    "esm": true
   }
 }
