--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@types/node": "^20.3.3",
     "nodemon": "^2.0.22",
+    "prisma": "^4.16.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
