"graphql tools setup part1"

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.5",
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/merge": "^9.0.0",
+    "@graphql-tools/schema": "^10.0.0",
     "@prisma/client": "^4.16.2",
+    "dotenv": "^16.3.1",
     "graphql": "^16.7.1"
   },
   "devDependencies": {
